세부 디자인 개선, 정책토의 기본 레이아웃 구상

--- a/client-app/src/styles/globals.css
+++ b/client-app/src/styles/globals.css
@@ -17,8 +17,10 @@
 }
 
 body {
+  min-height: 100vh;
   color: var(--foreground);
-  background: var(--background);
+  /*background: var(--background); */
+  background: linear-gradient(135deg, #fbfcff, #f3f1ff, #eaf8ff, #ffffff);
   font-family: "Noto Sans KR", serif;
   font-optical-sizing: auto;
   font-style: normal;
